Get login/logout working

--- a/ssd2023/missions/templates/base.html
+++ b/ssd2023/missions/templates/base.html
@@ -4,35 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="/static/styles.css" />
     <title>ISS and NASA</title>
   </head>
-
-  <style>
-    html {
-      position: relative;
-      min-height: 100%;
-    }
-    
-    body {
-      margin-bottom: 60px; /* margin bottom by footer height */
-    }
-    
-    .footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 60px;
-      line-height: 60px;
-      background-color: #f5f5f5;
-    }
-    
-    .container {
-      width: auto;
-      max-width: 680px;
-      padding: 0 15px;
-    }
-  </style>
 
   {% block styles %}
 
