--- a/ssd2023/missions/templates/index.html
+++ b/ssd2023/missions/templates/index.html
@@ -3,9 +3,10 @@
 
 {% block main %}
   <div class="mt-4">
-    <img src="{% static 'missions/images/nasa-logo.png' %}" alt="" width="256" height="128" />
+    <img src="/static/nasa-logo.png" alt="" width="256" height="128" />
     <h1>ISS and NASA</h1>
     <p class="lead">This is a prototype for the implementation of the ISS and NASA portal.</p>
+    <a href="/logout" class="btn btn-primary">Logout</a>
   </div>
 
   <ul>
