--- a/ssd2023/missions/templates/login.html
+++ b/ssd2023/missions/templates/login.html
@@ -2,13 +2,7 @@
 {% load static %}
 
 {% block styles %}
-
-<style>
-    html,
-    body {
-      height: 100%;
-    }
-
+  <style>
     body {
       display: -ms-flexbox;
       display: -webkit-box;
@@ -21,52 +15,28 @@
       justify-content: center;
       padding-top: 40px;
       padding-bottom: 40px;
-      background-color: #f5f5f5;
-    }
-
-    .form-signin .form-control {
-      position: relative;
-      box-sizing: border-box;
-      height: auto;
-      padding: 10px;
-      font-size: 16px;
-    }
-
-    .form-signin .form-control:focus {
-      z-index: 2;
-    }
-
-    .form-signin input[type='email'] {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-
-    .form-signin input[type='password'] {
-      margin-bottom: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
     }
   </style>
-{% endblock styles %}
+{% endblock %}
 
 {% block main %}
-  <form class="form-signin" action="/login" method="POST">
+  <form class="form-login" action="/login" method="POST">
     {% csrf_token %}
 
-    <img class="mb-4" src="{% static 'missions/images/nasa-logo.png' %}" alt="" width="256" height="128" />
+    <img class="mb-4" src="/static/nasa-logo.png" alt="" width="256" height="128" />
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
+    <p class="lead">Test test test</p>
 
     {% for field in form %}
       <label for="{{ field.auto_id }}" class="sr-only">{{ field.name }}</label>
-      {% if field.name == "password" %}
+      {% if field.name == 'password' %}
         <input type="password" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="form-control" placeholder="{{ field.label }}" required autofocus />
       {% else %}
         <input type="text" id="{{ field.auto_id }}" name="{{ field.html_name }}" class="form-control" placeholder="{{ field.label }}" required autofocus />
       {% endif %}
     {% endfor %}
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
   </form>
 {% endblock %}
