--- a/ssd2023/missions/templates/index.html
+++ b/ssd2023/missions/templates/index.html
@@ -6,14 +6,15 @@
     <img src="/static/nasa-logo.png" alt="" width="256" height="128" />
     <h1>ISS and NASA</h1>
     <p class="lead">This is a prototype for the implementation of the ISS and NASA portal.</p>
-    <a href="/logout" class="btn btn-primary">Logout</a>
   </div>
 
   <ul>
-    {% for report in reports %}
+    {% for mission in missions %}
       <li>
-        <a href="/export-report/{{ report.pk }}">{{ report.title }}</a>
+        <a href="/mission/{{ mission.pk }}">{{ mission.name }}</a>
       </li>
     {% endfor %}
   </ul>
+
+  <a href="/logout" class="btn btn-primary">Logout</a>
 {% endblock %}
