Update text on login, logout and mission pages

--- a/ssd2023/missions/templates/login.html
+++ b/ssd2023/missions/templates/login.html
@@ -25,8 +25,8 @@
 
     <img class="mb-4" src="/static/nasa-logo.png" alt="" width="256" height="128" />
 
-    <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
-    <p class="lead">Test test test</p>
+    <h1 class="h3 mb-3 font-weight-normal">ISS and NASA</h1>
+    <p class="lead">Log in</p>
 
     {% for field in form %}
       <label for="{{ field.auto_id }}" class="sr-only">{{ field.name }}</label>
