--- a/ssd2023/missions/templates/mission.html
+++ b/ssd2023/missions/templates/mission.html
@@ -7,6 +7,7 @@
   </div>
 
   <h1>{{ mission.name }}</h1>
+  <p class="lead">{{ mission.description }}</p>
 
   <a href="/" class="btn btn-primary">Back</a>
 {% endblock %}
