Add CRUD missions and generate reports

--- a/ssd2023/missions/templates/base.html
+++ b/ssd2023/missions/templates/base.html
@@ -9,6 +9,8 @@
     <title>ISS and NASA</title>
   </head>
 
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
   {% block styles %}
 
   {% endblock %}
@@ -20,10 +22,10 @@
       {% endblock %}
     </main>
 
-    <footer class="footer">
+    {% comment %} <footer class="footer">
       <div class="container">
         <span class="text-muted">Project of Group 2 (The B team) as part of the Secure Software Development (SSD) module.</span>
       </div>
-    </footer>
+    </footer> {% endcomment %}
   </body>
 </html>
