Add 403 page and update labels

--- a/ssd2023/missions/templates/mission-report.html
+++ b/ssd2023/missions/templates/mission-report.html
@@ -11,7 +11,7 @@
     <b>Mission:</b> {{ mission_report.mission }}
   </p>
   <p class="lead">
-    <b>Assign to:</b> {{ mission_report.assigned_to }}
+    <b>Assigned to:</b> {{ mission_report.assigned_to }}
   </p>
   <p class="lead">
     <b>Publish date:</b> {{ mission_report.publish_date }}
